# uc.comms

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build.bat  docker-compose.yml  package-lock.json  package.json
blueprints/uc-comms/: docker-compose.yml  template.toml
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
mobile/: capacitor.config.ts  package.json  tsconfig.json
server/: package.json
server/src/: auth.ts  config.ts  db.ts  index.ts  messages.ts  routes.ts  security.ts  socket.ts  types.ts  upload.ts
web/: index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest
web/src/: api.ts  main.tsx  socket.ts  styles.css  types.ts  vite-env.d.ts
web/src/components/: AuthGate.tsx  ChatShell.tsx  LanyardStatus.tsx  LoginForm.tsx  MessageComposer.tsx  MessageList.tsx  RegisterForm.tsx
