[package]
name = "uc-comms-desktop"
version = "0.1.0"
description = "Desktop wrapper for UC Comms"
edition = "2026"
license = "MIT"

[lib]
name = "uc_comms_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
